force-app/main/default/objects/MDM_Schedule_Setting__c/MDM_Schedule_Setting__c.object-meta.xml
<CustomObject>
    <label>MDM Schedule Setting</label>
    <nameField>
        <displayFormat>MDM-{00000}</displayFormat>
        <label>MDM Schedule Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDM Schedule Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>