force-app/main/default/objects/MDM_Schedule_Setting__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <label>DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>