force-app/main/default/objects/MDM_Schedule_Setting__c/fields/Error_Notification_Emails__c.field-meta.xml
<CustomField>
    <fullName>Error_Notification_Emails__c</fullName>
    <label>Error Notification Emails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>