force-app/main/default/objects/MDM_Schedule_Setting__c/fields/Field_Thresholds__c.field-meta.xml
<CustomField>
    <fullName>Field_Thresholds__c</fullName>
    <label>Field Thresholds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>