force-app/main/default/objects/MDM_Schedule_Setting__c/fields/Include_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Include_Dependents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Dependents</label>
    <type>Checkbox</type>
</CustomField>