force-app/main/default/objects/MDM_Schedule_Setting__c/fields/Schedule_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Job_Id__c</fullName>
    <label>Schedule Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>