force-app/main/default/objects/MDM_Schedule_Setting__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <label>Schedule Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>